# mvx-winter-challenges

./: .gitignore  README.md  const.py  main.py  query_helper.py  requirements.txt  transaction_helper.py
character-sc/: Cargo.toml  README.md
character-sc/meta/: Cargo.toml
character-sc/meta/src/: main.rs
character-sc/output/: character-sc.abi.json  character-sc.imports.json  character-sc.mxsc.json  character-sc.wasm  deploy-testnet.interaction.json
character-sc/scenarios/: character_sc.scen.json
character-sc/src/: character_sc.rs
output/: 10d.md  11d.json  11d.md  11d.txt  13.md  13d.md  14d.md  15d.md  16d.md  18d.md  3d.json  3d.txt  4d_transaction_issue_token.json  4d_transaction_issue_token.txt  5d.json  5d.txt  6d_transactions.txt  7d.md  8d.md  8d_burn_tokens_endpoint.txt  9d.md
resource-issuer/: Cargo.toml  README.md
resource-issuer-sc/meta/: Cargo.toml
resource-issuer-sc/output/: deploy-testnet.interaction.json  resource-issuer.abi.json  (+3 more)
resources-issuers/: README.md
staking-sc/: Cargo.toml  README.md
token-issuer-sc/: Cargo.toml  README.md
token-issuer-sc/meta/: Cargo.toml
token-issuer-sc/meta/src/: main.rs
token-issuer-sc/output/: deploy-testnet.interaction.json  token-issuer-sc.abi.json  token-issuer-sc.imports.json  token-issuer-sc.mxsc.json  token-issuer-sc.wasm
token-issuer-sc/scenarios/: token_issuer_sc.scen.json
token-issuer-sc/src/: token_issuer_sc.rs
token-issuer-sc/tests/: token_issuer_sc_scenario_go_test.rs  token_issuer_sc_scenario_rs_test.rs
token-issuer-sc/wasm/: Cargo.toml
token-issuer-sc/wasm/src/: lib.rs
(+42 files in other folders)
