[package]
name = "token-issuer-sc"
version = "0.0.0"
publish = false
edition = "2021"
authors = ["VersaliXis"]

[lib]
path = "src/token_issuer_sc.rs"

[dependencies.multiversx-sc]
version = "0.54.4"

[dev-dependencies]
num-bigint = "0.4"

[dev-dependencies.multiversx-sc-scenario]
version = "0.54.4"

[workspace]
members = [
    ".",
    "meta",
]
